tempo/deployment-tempo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
      - name: tempo
        image: grafana/tempo:1.6.0
        ports:
          - containerPort: 3200
        args:
          - "-config.file=/etc/tempo/tempo-local.yaml"
