tempo/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: sujeetkushwaha14/svelte-eng:v1.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "2000m"       
              memory: "2Gi"       
            limits:
              cpu: "2000m"        
              memory: "4Gi"
