tempo/service-tempo.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: monitoring
spec:
  selector:
    app: tempo
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3200
  type: ClusterIP
